--- a/mui-ripple.css
+++ b/mui-ripple.css
@@ -42,11 +42,11 @@
 	100% {
 		opacity: 0.14;
 		transform: scale(0.6, 0.6);
-		-moz-transform: translateY(-33%) scale(0.6, 0.6); /* stylelint-disable-line */
+		-moz-transform: translateY(-20%) scale(0.6, 0.6);
 	}
 	50% {
 		opacity: 0.1;
 		transform: scale(0.8, 0.8);
-		-moz-transform: translateY(-33%) scale(0.8, 0.8); /* stylelint-disable-line */
+		-moz-transform: translateY(-20%) scale(0.8, 0.8);
 	}
 }
